# Trading-bot

./: .env.example  .gitignore  Dockerfile  GITHUB_UPLOAD_GUIDE.md  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
bot/: __init__.py  cli.py  client.py  logging_config.py  orders.py  validators.py
templates/: index.html
